# Amazing_42_Nice

./: .flake8  .ini  Makefile  README.md  a_maze_ing.py  config.txt  display.py  maze.txt  maze_generator.py  mazegen-1.0.0-py3-none-any.whl  mypy.ini  parser.py  pyproject.toml  test.py
mazegen/: maze_generator.py
